extra file adding

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div> 
             <div class="navbar-start ml-20">
                 <div class="w-10">
-                    <img src="images/logo.png" alt="n/a">
+                    <img src="./images/logo.png" alt="n/a">
                 </div>
                 <div class="text-white">
                     <a class="btn btn-ghost normal-case text-3xl">Fruit Burst</a>
@@ -47,28 +47,28 @@
         <!--Slider section start-->
         <div class="carousel w-9/12 ml-40 mt-10">
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="/images/slider1.png" class="w-full" />
+              <img src="./images/slider1.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="/images/slider2.png" class="w-full" />
+              <img src="./images/slider2.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <a href="#slide3" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="/images/slider3.png" class="w-full" />
+              <img src="./images/slider3.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <a href="#slide4" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="/images/slider4.png" class="w-full" />
+              <img src="./images/slider4.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
@@ -122,7 +122,7 @@
         </div>
         <div class="w-9/12 ml-40 mt-20 flex">
             <div class="card w-60 bg-base-100  border-2 border-zinc-100 ml-3">
-                <figure><img src="/images/apple1.png" alt="Shoes" class="mt-10 w-16"/></figure>
+                <figure><img src="./images/apple1.png" alt="Shoes" class="mt-10 w-16"/></figure>
                 <div class="card-body">
                   <h2 class="text-center font-bold">12.90$ - 18.85$</h2>
                   <hr>
@@ -140,7 +140,7 @@
                     <dialog id="my_modal_1" class="modal">
                     <form method="dialog" class="modal-box w-74">
                         <div class="card w-60 bg-base-100  border-2 border-zinc-100 ml-3">
-                            <figure><img src="/images/apple1.png" alt="Shoes" class="mt-10 w-16"/></figure>
+                            <figure><img src="./images/apple1.png" alt="Shoes" class="mt-10 w-16"/></figure>
                             <div class="card-body">
                               <p class="text-center text-black text-2xl">Apples</p>
                               <div class="rating ml-18 pl-54">
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="card w-60 bg-base-100  border-2 border-zinc-100 ml-3">
-                <figure><img src="/images/orange2.png" alt="Shoes" class="mt-10 w-16"/></figure>
+                <figure><img src="./images/orange2.png" alt="Shoes" class="mt-10 w-16"/></figure>
                 <div class="card-body">
                   <h2 class="text-center font-bold">12.90$ - 18.85$</h2>
                   <hr>
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="card w-60 bg-base-100  border-2 border-zinc-100 ml-3">
-                <figure><img src="/images/dragon3.png" alt="Shoes" class="mt-10 w-16" /></figure>
+                <figure><img src="./images/dragon3.png" alt="Shoes" class="mt-10 w-16" /></figure>
                 <div class="card-body">
                   <h2 class="text-center font-bold">12.90$ - 18.85$</h2>
                   <hr>
@@ -194,7 +194,7 @@
                 </div>
             </div>
             <div class="card w-60 bg-base-100  border-2 border-zinc-100 ml-3">
-                <figure><img src="/images/banana4.png" alt="Shoes" class="mt-10 w-16"/></figure>
+                <figure><img src="./images/banana4.png" alt="Shoes" class="mt-10 w-16"/></figure>
                 <div class="card-body">
                   <h2 class="text-center font-bold">12.90$ - 18.85$</h2>
                   <hr>
@@ -228,7 +228,7 @@
             </div>
             <div class="pt-96 absolute flex mb-64">
                 <div class="text-white">
-                    <img class="w-24" src="images/member1.png" alt="n/a">
+                    <img class="w-24" src="./images/member1.png" alt="n/a">
                     <h1 class="mt-5">Awlad Hossain</h1>
                     <p class="text-xs pl-5">Fruits Expert</p>
                     <ul class="menu menu-horizontal">
@@ -238,7 +238,7 @@
                       </ul>
                 </div>
                 <div class="text-white">
-                    <img class="w-24" src="images/member2.png" alt="n/a">
+                    <img class="w-24" src="./images/member2.png" alt="n/a">
                     <h1 class="mt-5">Safia Chowdhury</h1>
                     <p class="text-xs pl-5">Fruits Expert</p>
                     <ul class="menu menu-horizontal">
@@ -248,7 +248,7 @@
                       </ul>
                 </div>
                 <div class="text-white">
-                    <img class="w-24" src="images/member3.png" alt="n/a">
+                    <img class="w-24" src="./images/member3.png" alt="n/a">
                     <h1 class="mt-5">Rokib Hossain</h1>
                     <p class="text-xs pl-5">Fruits Expert</p>
                     <ul class="menu menu-horizontal">
@@ -258,7 +258,7 @@
                       </ul>
                 </div>
                 <div class="text-white">
-                    <img class="w-24" src="images/member4.png" alt="n/a">
+                    <img class="w-24" src="./images/member4.png" alt="n/a">
                     <h1 class="pl-8 mt-5">Chaity</h1>
                     <p class="text-xs pl-5">Fruits Expert</p>
                     <ul class="menu menu-horizontal">
@@ -275,7 +275,7 @@
         <div class="bg-black mt-16 h-92 pt-24 pb-24">
             <div class="navbar-start pl-96 ml-48 flex ">
                 <div class="w-10">
-                    <img src="images/logo.png" alt="n/a">
+                    <img src="./images/logo.png" alt="n/a">
                 </div>
                 <div class="text-white">
                     <a class="btn btn-ghost normal-case text-3xl">Fruit Burst</a>
