--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </div> 
             <div class="navbar-start ml-20">
                 <div class="w-10">
-                    <img src="./images/logo.png" alt="n/a">
+                    <img src="./images/logo.png" alt="na">
                 </div>
                 <div class="text-white">
                     <a class="btn btn-ghost normal-case text-3xl">Fruit Burst</a>
                 </div>
             </div>
-            <div class="">
+            <div>
                 <div class="form-control">
                     <input type="text" placeholder="Search here" class="input input-bordered w-24 md:w-auto rounded-full"/>
                   </div>    
