bonus part adding

--- a/index.html
+++ b/index.html
@@ -139,17 +139,22 @@
                     <button class="btn text-red-500 bg-white border-none" onclick="my_modal_1.showModal()">Details</button>
                     <dialog id="my_modal_1" class="modal">
                     <form method="dialog" class="modal-box w-74">
-                        <div class="card w-60 bg-base-100  border-2 border-zinc-100 ml-3">
-                            <figure><img src="./images/apple1.png" alt="Shoes" class="mt-10 w-16"/></figure>
+                        <div class="card w-54 bg-base-100 border-zinc-100 ml-3">
+                            <figure><img src="./images/apple1.png" alt="Shoes" class="mt-8 w-18"/></figure>
                             <div class="card-body">
-                              <p class="text-center text-black text-2xl">Apples</p>
-                              <div class="rating ml-18 pl-54">
+                              <p class="text-center text-black text-2xl font-bold">Apples</p>
+                              <span class="text-xs text-center">Professional employees are there for you to pick the most<br> amazing and fresh fruits.</span>
+                              <div class="rating ml-32 pl-54">
                                 <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                                 <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" checked />
                                 <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                                 <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                                 <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                               </div>
+                            </div>
+                            <div class="ml-36">
+                                <button class="btn bg-white w-30 text-xs border-red-500 text-red-500">Close</button>
+                                <button class="btn bg-red-500 text-white w-30 text-xs">Buy Now</button>
                             </div>
                         </div>
                     </form>
@@ -170,8 +175,31 @@
                     <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                     <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                   </div>
-                  <div class="card-actions justify-center text-red-500">
-                    Details
+                  <div class="card-actions justify-center">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn text-red-500 bg-white border-none" onclick="my_modal_2.showModal()">Details</button>
+                    <dialog id="my_modal_2" class="modal">
+                    <form method="dialog" class="modal-box w-74">
+                        <div class="card w-54 bg-base-100 border-zinc-100 ml-3">
+                            <figure><img src="./images/orange2.png" alt="Shoes" class="mt-8 w-18"/></figure>
+                            <div class="card-body">
+                              <p class="text-center text-black text-2xl font-bold">Orange</p>
+                              <span class="text-xs text-center">Professional employees are there for you to pick the most<br> amazing and fresh fruits.</span>
+                              <div class="rating ml-32 pl-54">
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" checked />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                              </div>
+                            </div>
+                            <div class="ml-36">
+                                <button class="btn bg-white w-30 text-xs border-red-500 text-red-500">Close</button>
+                                <button class="btn bg-red-500 text-white w-30 text-xs">Buy Now</button>
+                            </div>
+                        </div>
+                    </form>
+                    </dialog>
                   </div>
                 </div>
             </div>
@@ -188,8 +216,31 @@
                     <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                     <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                   </div>
-                  <div class="card-actions justify-center text-red-500">
-                    Details
+                  <div class="card-actions justify-center">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn text-red-500 bg-white border-none" onclick="my_modal_3.showModal()">Details</button>
+                    <dialog id="my_modal_3" class="modal">
+                    <form method="dialog" class="modal-box w-74">
+                        <div class="card w-54 bg-base-100 border-zinc-100 ml-3">
+                            <figure><img src="./images/dragon3.png" alt="Shoes" class="mt-8 w-18"/></figure>
+                            <div class="card-body">
+                              <p class="text-center text-black text-2xl font-bold">Red Dragon</p>
+                              <span class="text-xs text-center">Professional employees are there for you to pick the most<br> amazing and fresh fruits.</span>
+                              <div class="rating ml-32 pl-54">
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" checked />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                              </div>
+                            </div>
+                            <div class="ml-36">
+                                <button class="btn bg-white w-30 text-xs border-red-500 text-red-500">Close</button>
+                                <button class="btn bg-red-500 text-white w-30 text-xs">Buy Now</button>
+                            </div>
+                        </div>
+                    </form>
+                    </dialog>
                   </div>
                 </div>
             </div>
@@ -206,8 +257,31 @@
                     <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                     <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
                   </div>
-                  <div class="card-actions justify-center text-red-500">
-                    Details
+                  <div class="card-actions justify-center">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn text-red-500 bg-white border-none" onclick="my_modal_4.showModal()">Details</button>
+                    <dialog id="my_modal_4" class="modal">
+                    <form method="dialog" class="modal-box w-74">
+                        <div class="card w-54 bg-base-100 border-zinc-100 ml-3">
+                            <figure><img src="./images/banana4.png" alt="Shoes" class="mt-8 w-18"/></figure>
+                            <div class="card-body">
+                              <p class="text-center text-black text-2xl font-bold">Banana</p>
+                              <span class="text-xs text-center">Professional employees are there for you to pick the most<br> amazing and fresh fruits.</span>
+                              <div class="rating ml-32 pl-54">
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" checked />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                                <input type="radio" name="rating-4" class="mask mask-star-2 bg-red-500" />
+                              </div>
+                            </div>
+                            <div class="ml-36">
+                                <button class="btn bg-white w-30 text-xs border-red-500 text-red-500">Close</button>
+                                <button class="btn bg-red-500 text-white w-30 text-xs">Buy Now</button>
+                            </div>
+                        </div>
+                    </form>
+                    </dialog>
                   </div>
                 </div>
             </div>
