--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         <div class="carousel w-9/12 ml-40 mt-10">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="./images/slider1.png" class="w-full" />
+              <div class="absolute text-center text-white ml-18 hero-overlay bg-opacity-78">
+                <h1 class="text-5xl font-bold mt-20">Exotic tastes at your <br>doorstep</h1>
+                <p class="mt-5">We supply highly quality organic products</p>
+                <button class="btn btn-primary mt-10 bg-red-500 border-none text-white ml-68">
+                  Shop Now
+                </button>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
@@ -55,6 +62,13 @@
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
               <img src="./images/slider2.png" class="w-full" />
+              <div class="absolute text-center text-white ml-18 hero-overlay bg-opacity-78">
+                <h1 class="text-5xl font-bold mt-20">Exotic tastes at your <br>doorstep</h1>
+                <p class="mt-5">We supply highly quality organic products</p>
+                <button class="btn btn-primary mt-10 bg-red-500 border-none text-white ml-68">
+                  Shop Now
+                </button>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <a href="#slide3" class="btn btn-circle">❯</a>
@@ -62,6 +76,13 @@
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
               <img src="./images/slider3.png" class="w-full" />
+              <div class="absolute text-center text-white ml-18 hero-overlay bg-opacity-78">
+                <h1 class="text-5xl font-bold mt-20">Exotic tastes at your <br>doorstep</h1>
+                <p class="mt-5">We supply highly quality organic products</p>
+                <button class="btn btn-primary mt-10 bg-red-500 border-none text-white ml-68">
+                  Shop Now
+                </button>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <a href="#slide4" class="btn btn-circle">❯</a>
@@ -69,6 +90,13 @@
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
               <img src="./images/slider4.png" class="w-full" />
+              <div class="absolute text-center text-white ml-18 hero-overlay bg-opacity-78">
+                <h1 class="text-5xl font-bold mt-20">Exotic tastes at your <br>doorstep</h1>
+                <p class="mt-5">We supply highly quality organic products</p>
+                <button class="btn btn-primary mt-10 bg-red-500 border-none text-white ml-68">
+                  Shop Now
+                </button>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
