--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </button>
         <!--Deal of the day end-->
 
-        <!--Meet the team section start-->
+        <!---Meet the team section start--->
         <div class="hero min-h-screen w-9/12 ml-40 mt-20" style="background-image: url(images/team.png);">
             <div class="hero-overlay bg-opacity-80"></div>
             <div class="hero-content text-center text-neutral-content mb-52">
